# open-impact

./: .gitignore  .pre-commit-config.yaml  main.py  pyproject.toml
  .github/workflows/: pages.yml
.github/workflows/: ci.yml  pages.yml
data/meteo-france-75/unzipped/: MENSQ_75_latest-2024-2025.csv  MENSQ_descriptif_champs.csv
data/output/: final_yearly.csv
scripts/: make_data.py  template.py
scripts/plot_graphics/: plot_temperature.py
site/: app.js  index.html
src/: config.py  html_template.py  main.py  utils.py
src/cli/: cli.py
src/plot_graphics/: plot_temperature.py
tests/: test_build_weather_datasets.py  test_utils.py
