[project]
name = "open-impact"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=6.0.0",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "plotly>=6.3.1",
    "pre-commit>=4.3.0",
    "ruff>=0.14.0",
]


[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
