[project]
name = "open-impact"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=6.0.0",
    "click>=8.3.1",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "pytest>=8.4.2",
    "pyyaml>=6.0.3",
    "rich>=14.2.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "plotly>=6.3.1",
    "pre-commit>=4.3.0",
    "ruff>=0.14.0",
    "pytest>=7.4,<9.0",
]


[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]

[project.scripts]
meteo = "cli.cli:main"
